# envctl

./: .gitignore  Cargo.toml  README.md  envctl.code-workspace  envctl.json  flamegraph.html  makefile
.github/workflows/: build.yml  compile.yml
config/: development.json  release.json
docs/: readme.md
docs/getting-started/: advanced-rule-configuration.md  configuring.md  getting-started.md  making-your-first-rule.md  rule-templates.md
examples/: config.json
examples/hello-world/src/: main.rs
rules/: broken-wasm-test.wasm  wasi-test.wasm  wasm-test.wasm
src/: directory.rs  main.rs  proc.rs  rules.rs  settings.rs  tests.rs  wasm.rs
src/wasm/: mod.rs
