[package]
name = "envctl"
version = "0.1.0"
authors = ["Matt Vogel <matthew.scott.vogel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
incremental = false
strip = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.13.1", features = ["json"]}
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
flame = "0.2.2"
flamer = "0.3"
regex = "1"
wasmtime = "2.0.2"
wasmtime-wasi = "2.0.2"
wasi-common = "2.0.2"
anyhow = "1.0.22"
directories = "4.0.1"