[package]
name = "envctl"
version = "0.1.0"
authors = ["Matt Vogel <matthew.scott.vogel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
incremental = false
strip = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.13.1", features = ["json"]}
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
flame = "0.2.2"
flamer = "0.3"
regex = "1"
wasmtime = "3.0.0"
wasmtime-wasi = "3.0.0"
wasi-common = "3.0.0"
anyhow = "1.0.22"
wasmtime-cache = "3.0.0"
wasmtime-cli-flags = "3.0.0"
wasmtime-cranelift = "3.0.0"
wasmtime-environ = "3.0.0"
directories = "4.0.1"
humantime = "2.1.0"
once_cell = "1.16.0"
libc = "0.2.137"
listenfd = "1.0.0"